prometheus-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: prometheus-ui
    namespace: monitoring
    annotations:
       nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx # or nginx-internal
  rules:
  - host: prometheus.ehealthinnovation.org
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: prometheus-service
              port:
                number: 8080


  tls:
      - hosts:
         - prometheus.ehealthinnovation.org
        secretName: prometheus-ssl-cert
